--- a/style.css
+++ b/style.css
@@ -1,27 +1,7 @@
-@font-face{ font-family:"StencilRough"; src:url("./fonts/PorticoStencilRough.ttf") format("truetype"), url("./fonts/PorticoStencilRough.woff2") format("woff2"), url("./fonts/PorticoStencilRough.woff") format("woff"); font-weight:bold; font-style:normal;} 
-  @keyframes zommInOut { from { background-size:  100% auto; } to { background-size: 140% auto; } }
-  .logo{ 
-    max-width:640px; 
-    min-height:360px; 
-    /**/
-    background-image: url("//source.unsplash.com/collection/3323575/640x465");
-    background-repeat: no-repeat;  
-    background-position: center center;
-    background-size:  100% auto; 
-    /**/
-    display:flex;  
-    justify-content: center;
-    align-items: stretch;
-    /**/
-    animation: 3s zommInOut forwards ;
-    animation-delay: 1s;
-  }
+@font-face{ font-family:"StencilRough"; src:url("/fonts/PorticoStencilRough.ttf") format("truetype"), url("./fonts/PorticoStencilRough.woff2") format("woff2"), url("./fonts/PorticoStencilRough.woff") format("woff"); font-weight:bold; font-style:normal;} 
+@keyframes zommInOut { from { background-size:  100% auto; } to { background-size: 140% auto; } }
+.logo{ max-width:640px; min-height:360px; background-image:url("//source.unsplash.com/collection/3323575/640x465"); background-repeat:no-repeat; background-position:center center; background-size: 100% auto; display:flex; justify-content:center; align-items:stretch; animation:3s zommInOut forwards ; animation-delay:1s;} 
+@media (max-width:360px){ .logo{min-height:270px; background-size:cover!important;}} 
+.logo .name{color:transparent} .has-stencil .name{color:black} 
 
-  @media (max-width: 360px) {
-    .logo {min-height: 270px; background-size:cover!important; }
-  }
-  .logo .name {color: transparent;}
-  .has-stencil .name {color: black;}
-  
-
-.name[data-v-ca4cb224]{position:relative;margin:1rem;font-family:StencilRough;font-size:6rem;mix-blend-mode:lighten;background:hsla(0,0%,100%,.95)}.name>span[data-v-ca4cb224]{cursor:pointer;transition:transform .2s,top .3s,right .3s,bottom .3s,left .3s;display:inline-block;width:66px;height:76px;line-height:.8;text-align:center}.name>span.i[data-v-ca4cb224]{text-align:left}.name>small[data-v-ca4cb224]{height:62px;white-space:nowrap}.name>small>span[data-v-ca4cb224],.name>small[data-v-ca4cb224]{transition:transform .2s,top .3s,right .3s,bottom .3s,left .3s;display:inline-block;line-height:.8}.name>small>span[data-v-ca4cb224]{cursor:pointer;width:54px}.name>small>span._w[data-v-ca4cb224]{width:77px}.logo .e1[data-v-ca4cb224],.logo .e2[data-v-ca4cb224],.logo .i[data-v-ca4cb224],.logo .n[data-v-ca4cb224],.logo .s[data-v-ca4cb224]{position:relative;top:121px;transform:translate(0)}.logo small[data-v-ca4cb224]{position:relative;top:136px}@media (max-width:540px){.logo .i[data-v-ca4cb224]{width:40px}.logo small[data-v-ca4cb224]{position:absolute;top:100%;left:100%;transform:translate(-100%,-100%)}}@media (max-width:360px){.logo[data-v-ca4cb224]{min-height:270px}.logo small[data-v-ca4cb224]{transform:translate(100%,100%)}.logo .e1[data-v-ca4cb224],.logo .s[data-v-ca4cb224]{position:absolute;top:3rem;transform:translate(-100%)}.logo .e1[data-v-ca4cb224]{transform:translate(0)}.logo .e2[data-v-ca4cb224],.logo .i[data-v-ca4cb224],.logo .n[data-v-ca4cb224]{position:absolute;top:3rem;transform:translate(-100%,100%)}.logo .e2[data-v-ca4cb224]{transform:translateY(100%)}.logo .i[data-v-ca4cb224]{transform:translate(160%,100%);position:absolute}}
+.name[data-v-e8ba3f3c]{position:relative;margin:1rem;font-family:StencilRough;font-size:6rem;mix-blend-mode:lighten;background:hsla(0,0%,100%,.95)}.name>span[data-v-e8ba3f3c]{cursor:pointer;transition:transform .2s,top .3s,right .3s,bottom .3s,left .3s;display:inline-block;width:66px;height:76px;line-height:.8;text-align:center}.name>span.i[data-v-e8ba3f3c]{text-align:left}.name>small[data-v-e8ba3f3c]{height:62px;white-space:nowrap}.name>small>span[data-v-e8ba3f3c],.name>small[data-v-e8ba3f3c]{transition:transform .2s,top .3s,right .3s,bottom .3s,left .3s;display:inline-block;line-height:.8}.name>small>span[data-v-e8ba3f3c]{cursor:pointer;width:54px}.name>small>span._w[data-v-e8ba3f3c]{width:77px}.logo .e1[data-v-e8ba3f3c],.logo .e2[data-v-e8ba3f3c],.logo .i[data-v-e8ba3f3c],.logo .n[data-v-e8ba3f3c],.logo .s[data-v-e8ba3f3c]{position:relative;top:121px;transform:translate(0)}.logo small[data-v-e8ba3f3c]{position:relative;top:136px}@media (max-width:540px){.logo .i[data-v-e8ba3f3c]{width:40px}.logo small[data-v-e8ba3f3c]{position:absolute;top:100%;left:100%;transform:translate(-100%,-100%)}}@media (max-width:360px){.logo[data-v-e8ba3f3c]{min-height:270px}.logo small[data-v-e8ba3f3c]{transform:translate(100%,100%)}.logo .e1[data-v-e8ba3f3c],.logo .s[data-v-e8ba3f3c]{position:absolute;top:3rem;transform:translate(-100%)}.logo .e1[data-v-e8ba3f3c]{transform:translate(0)}.logo .e2[data-v-e8ba3f3c],.logo .i[data-v-e8ba3f3c],.logo .n[data-v-e8ba3f3c]{position:absolute;top:3rem;transform:translate(-100%,100%)}.logo .e2[data-v-e8ba3f3c]{transform:translateY(100%)}.logo .i[data-v-e8ba3f3c]{transform:translate(160%,100%);position:absolute}}
